--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>myRecipeBook</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="login-card">    
+            <img class="splash-img" src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" alt="Delicious asian inspired food">
+                <div class="login-right">
+                    <h1> Please log in or signup below</h1>
+                    <div class="login-input">           
+                        <input type="text" placeholder="Username" id="username" required >
+                        <input type="password" id="password" placeholder="Password" required>
+                        <button>Log In</button>   
+                        <button>Signup</button>   
+                    </div>
+                </div>
+    </div>
+       
 </body>
 </html>
