Finished temp layout

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="login-card">    
         <img class="splash-img" src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" alt="Delicious asian inspired food">
         <div class="login-right">
-            <h1> Please log in or signup below</h1>
+            <h1> Please log in or signup</h1>
             <div class="login-input">           
                 <input type="text" placeholder="Username" id="username" required >
                 <input type="password" id="password" placeholder="Password" required>
