--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>myRecipeBook</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;1,500&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="login-card">    
-        <img class="splash-img" src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" alt="Delicious asian inspired food">
+        <!-- <img class="splash-img" src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" alt="Delicious asian inspired food">
+        -->
+        <div class="login-left"></div>
         <div class="login-right">
             <h1> Please log in or signup</h1>
             <div class="login-input">           
@@ -19,6 +24,7 @@
                 <button>Signup</button>   
             </div>
         </div>
-    </div>       
+    </div>      
+    <h3 id="terms">Terms and conditions apply</h3> 
 </body>
 </html>
