--- a/recipe.html
+++ b/recipe.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="stylesheet" href="recipe.css">
 </head>
 <body>
     <header>
@@ -19,9 +21,7 @@
                 <li><a href="#"><i class="fa-solid fa-list"></i></a></li>
                 <li><a href="#"></a><i class="fa-solid fa-bars"></i></li>
             </ul>
-            <div class="search">
-                <input>                 
-            </div>
+
         </nav>
     </header>
 
