Basic navbar styling

--- a/recipe.html
+++ b/recipe.html
@@ -13,17 +13,20 @@
     <link rel="stylesheet" href="recipe.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
-                <li><a href="#"><i class="fa-regular fa-user"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-list"></i></a></li>
-                <li><a href="#"></a><i class="fa-solid fa-bars"></i></li>
-            </ul>
+<header>
+    <span class="logo">myRecipeBook</span>
+    <nav>
+        
+        <ul class="navbar">            
+            <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
+            <li><a href="#"><i class="fa-solid fa-list"></i></a></li>
+            <li><a href="#"><i class="fa-regular fa-user"></i></a></li>
+            
+            <li class="navbar-right"><a href="#"><i class="fa-solid fa-bars"></i></a></li>
+        </ul>
+    </nav>
+</header>
 
-        </nav>
-    </header>
 
     <main>
         <div>
